--- a/index.html
+++ b/index.html
@@ -100,40 +100,8 @@
         <div class="container ">
             <div class="row pad">
                 <div data-aos="flip-up" class="col-lg-3 col-md-4 col-sm-6 col-12 pt-4  ">
-                    <div class="position-relative d-flex">
-                        <img src="./assets/images/post1.png" alt="#" class="w-100 img">
-                        <div class="d-flex like gap-2">
-                            <a href="" class="svglike"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                    viewBox="0 0 24 24" fill="none">
-                                    <path
-                                        d="M7 3C4.239 3 2 5.216 2 7.95C2 10.157 2.875 15.395 11.488 20.69C11.6423 20.7839 11.8194 20.8335 12 20.8335C12.1806 20.8335 12.3577 20.7839 12.512 20.69C21.125 15.395 22 10.157 22 7.95C22 5.216 19.761 3 17 3C14.239 3 12 6 12 6C12 6 9.761 3 7 3Z"
-                                        stroke="white" stroke-width="2" stroke-linecap="round"
-                                        stroke-linejoin="round" />
-                                </svg></a>
-                            <p class="white">10</p>
-                        </div>
-                        <div class="d-flex comment gap-2">
-                            <a href="" class="svgcomment"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                    viewBox="0 0 24 24" fill="none">
-                                    <path
-                                        d="M14 19C17.771 19 19.657 19 20.828 17.828C22 16.657 22 14.771 22 11C22 7.229 22 5.343 20.828 4.172C19.657 3 17.771 3 14 3H10C6.229 3 4.343 3 3.172 4.172C2 5.343 2 7.229 2 11C2 14.771 2 16.657 3.172 17.828C3.825 18.482 4.7 18.771 6 18.898"
-                                        stroke="white" stroke-width="2" stroke-linecap="round"
-                                        stroke-linejoin="round" />
-                                    <path
-                                        d="M14.0002 19C12.7642 19 11.4022 19.5 10.1592 20.145C8.16124 21.182 7.16224 21.701 6.67024 21.37C6.17824 21.04 6.27124 20.015 6.45824 17.966L6.50024 17.5"
-                                        stroke="white" stroke-width="2" stroke-linecap="round" />
-                                </svg></a>
-                            <p class="white">20</p>
-                        </div>
-                        <div class="d-flex share">
-                            <a href="" class="svgshare"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24"
-                                    viewBox="0 0 24 24" fill="none">
-                                    <path
-                                        d="M17.5002 22.0002C16.9664 22.0064 16.4385 21.889 15.9576 21.6572C15.4768 21.4253 15.0561 21.0854 14.7285 20.6639C14.4008 20.2425 14.1752 19.7509 14.0692 19.2278C13.9631 18.7046 13.9796 18.164 14.1172 17.6482L7.85722 14.0702C7.32914 14.554 6.66515 14.8639 5.95514 14.9578C5.24513 15.0517 4.52341 14.9252 3.8877 14.5953C3.25199 14.2655 2.73301 13.7482 2.40101 13.1136C2.06902 12.479 1.94005 11.7577 2.03158 11.0474C2.12312 10.3371 2.43072 9.67206 2.91274 9.14236C3.39477 8.61266 4.02793 8.24388 4.72649 8.08596C5.42506 7.92803 6.15528 7.9886 6.81828 8.25944C7.48129 8.53029 8.04504 8.99834 8.43322 9.60021L14.1162 6.35121C14.0427 6.07339 14.0037 5.78757 14.0002 5.50021C13.9933 4.68844 14.2662 3.89907 14.7732 3.26501C15.2801 2.63095 15.99 2.19093 16.7834 2.01903C17.5768 1.84714 18.4052 1.95388 19.1291 2.32127C19.853 2.68866 20.4282 3.29427 20.7579 4.03613C21.0875 4.77798 21.1515 5.61077 20.939 6.39426C20.7265 7.17775 20.2505 7.86409 19.5912 8.33772C18.9319 8.81134 18.1295 9.04333 17.3192 8.9946C16.5088 8.94588 15.74 8.61943 15.1422 8.07021L8.99222 11.5852C8.98522 11.8452 8.94922 12.1022 8.88322 12.3532L15.1432 15.9302C15.5622 15.5457 16.0687 15.2692 16.6187 15.1248C17.1687 14.9804 17.7457 14.9724 18.2995 15.1014C18.8534 15.2305 19.3674 15.4927 19.7969 15.8654C20.2264 16.2381 20.5585 16.71 20.7643 17.2401C20.9702 17.7702 21.0436 18.3426 20.9781 18.9075C20.9127 19.4724 20.7104 20.0128 20.3888 20.4818C20.0671 20.9508 19.636 21.3342 19.1326 21.5988C18.6292 21.8634 18.0689 22.0012 17.5002 22.0002ZM17.5002 17.0002C17.1024 17.0002 16.7209 17.1582 16.4396 17.4396C16.1583 17.7209 16.0002 18.1024 16.0002 18.5002C16.0002 18.898 16.1583 19.2796 16.4396 19.5609C16.7209 19.8422 17.1024 20.0002 17.5002 20.0002C17.898 20.0002 18.2796 19.8422 18.5609 19.5609C18.8422 19.2796 19.0002 18.898 19.0002 18.5002C19.0002 18.1024 18.8422 17.7209 18.5609 17.4396C18.2796 17.1582 17.898 17.0002 17.5002 17.0002ZM5.50022 10.0002C5.10239 10.0002 4.72086 10.1582 4.43956 10.4396C4.15825 10.7209 4.00022 11.1024 4.00022 11.5002C4.00022 11.898 4.15825 12.2796 4.43956 12.5609C4.72086 12.8422 5.10239 13.0002 5.50022 13.0002C5.89804 13.0002 6.27957 12.8422 6.56088 12.5609C6.84218 12.2796 7.00022 11.898 7.00022 11.5002C7.00022 11.1024 6.84218 10.7209 6.56088 10.4396C6.27957 10.1582 5.89804 10.0002 5.50022 10.0002ZM17.5002 4.00021C17.3032 4.00021 17.1082 4.03901 16.9262 4.11439C16.7442 4.18977 16.5788 4.30026 16.4396 4.43955C16.3003 4.57884 16.1898 4.7442 16.1144 4.92619C16.039 5.10817 16.0002 5.30323 16.0002 5.50021C16.0002 5.69719 16.039 5.89225 16.1144 6.07424C16.1898 6.25622 16.3003 6.42158 16.4396 6.56087C16.5788 6.70016 16.7442 6.81065 16.9262 6.88603C17.1082 6.96141 17.3032 7.00021 17.5002 7.00021C17.898 7.00021 18.2796 6.84218 18.5609 6.56087C18.8422 6.27957 19.0002 5.89804 19.0002 5.50021C19.0002 5.10239 18.8422 4.72086 18.5609 4.43955C18.2796 4.15825 17.898 4.00021 17.5002 4.00021Z"
-                                        fill="white" />
-                                </svg></a>
-                        </div>
-                    </div>
+                    <button id="myBtn" class="bd img"><img src="./assets/images/post1.png" alt="#"
+                            class="w-100 img "></button>
                 </div>
                 <div data-aos="flip-up" class="col-lg-3 col-md-4 col-sm-6 col-12 pt-4 ">
                     <div class="position-relative d-flex">
@@ -721,6 +689,61 @@
         </div>
 
     </div>
+    <div id="myModal" class="modal">
+        <div class="modal-content">
+            <span class="close">&times;</span>
+            <div class="row">
+                <div class="col-6">
+                    <div><img class="w-100" src="./assets/images/post1.png" alt=""></div>
+                </div>
+                <div class="col-6">
+                    <p class="  para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi pariatur quaerat
+                        praesentium delectus. Dolor nemo aliquam fugiat eius enim impedit doloribus vero eum earum. At
+                        dolorum corrupti quibusdam, illum provident assumenda excepturi obcaecati facere voluptatibus
+                        repudiandae eveniet labore quo, veritatis aspernatur et adipisci. Quam mollitia incidunt
+                        inventore sed aliquid temporibus consectetur molestiae suscipit eveniet quae? Quas tempore
+                        voluptatum culpa dicta facere vero unde voluptas aut magnam, natus animi quam nesciunt tenetur
+                        accusamus similique hic quos beatae? Deserunt officiis veritatis nam impedit quia eaque minima
+                        qui accusantium, ipsam vitae beatae facere vel quod culpa ipsa rerum saepe laboriosam quasi
+                        fugit quisquam odio consequuntur animi? Inventore quam blanditiis tenetur molestias enim culpa
+                        impedit earum reprehenderit, quasi provident, suscipit error nulla rem aspernatur, fugiat
+                        repellat dolores odio velit? Nihil nam cumque iure doloremque, exercitationem accusamus? Qui
+                        adipisci expedita iure corporis ducimus. Cum incidunt ex est repudiandae porro autem deserunt
+                        perferendis similique iste voluptates amet mollitia nobis voluptas, temporibus officia at
+                        quibusdam animi odit! Voluptatum, vel! Eaque inventore nemo porro asperiores delectus facilis
+                        sapiente non repellat est, sint assumenda exercitationem, molestiae voluptatem iure totam culpa
+                        alias cum? Nesciunt consectetur soluta sed architecto dolorum mollitia voluptatem facere? Culpa
+                        amet modi unde repudiandae, obcaecati omnis dicta quam, quis magni assumenda excepturi harum
+                        reprehenderit numquam, quasi eum soluta deserunt consequuntur tempora eaque similique ab
+                        adipisci nisi saepe! Molestiae, suscipit dolores labore modi velit reprehenderit rem quam
+                        deserunt iure dignissimos minus libero numquam distinctio quisquam repellendus quibusdam?
+                        Reiciendis eveniet modi possimus accusamus asperiores quia voluptates voluptatem architecto,
+                        sequi alias. Totam unde nulla sequi dicta a. Quis exercitationem in sint deleniti nesciunt optio
+                        molestiae temporibus harum, sapiente aut, id distinctio, rerum accusantium nostrum impedit
+                        perferendis placeat? Nihil architecto et repudiandae, quidem a eveniet reiciendis explicabo
+                        magni ad eum ab tempore, recusandae reprehenderit, repellat nemo quia sequi nam! Expedita sequi
+                        soluta hic veniam rerum, alias nulla sint fuga repellendus eum dolorum praesentium omnis? Eum
+                        sapiente incidunt nihil repellat aperiam dignissimos sint doloribus autem asperiores eveniet
+                        minus fugiat earum architecto, velit exercitationem voluptates cum aut perferendis. Veniam
+                        voluptate totam harum at nisi. Molestias magni molestiae voluptatibus ea quos odit enim fuga
+                        harum neque expedita. Hic aliquam beatae, nam consectetur cumque maxime voluptatum suscipit
+                        error harum eveniet! Ratione iure ullam, reprehenderit deleniti nostrum sint fugit alias et qui
+                        amet eius nihil dicta incidunt. Tempora beatae illum quasi sequi facere facilis. Tempore
+                        adipisci cum omnis quam ex maiores ut praesentium. Adipisci exercitationem laboriosam illum non
+                        nobis eum vitae itaque fugit mollitia nemo quis illo voluptatibus consequuntur sequi aliquam,
+                        omnis fuga ipsum praesentium? Dolorem sed ex reprehenderit magni excepturi, quas sunt, aliquam
+                        tempora, nemo suscipit asperiores tempore assumenda totam ipsum voluptatum est. Praesentium odio
+                        at, reiciendis maiores, sit accusantium alias nam iusto ea assumenda maxime dicta molestiae
+                        incidunt quaerat pariatur, soluta architecto officiis nisi! Sapiente quis exercitationem
+                        laudantium, illum explicabo nobis culpa ea fuga recusandae, vero labore, laborum doloremque eum
+                        praesentium est repellat dolores natus accusantium at? Sapiente excepturi adipisci, animi
+                        quibusdam eveniet enim at magni iusto, deleniti temporibus officiis harum corporis quo
+                        praesentium?</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
         crossorigin="anonymous"></script>
@@ -728,6 +751,23 @@
     <script>
         AOS.init({ duration: 2500, });
     </Script>
+    <script>
+        var modal = document.getElementById("myModal");
+        var btn = document.getElementById("myBtn");
+        var span = document.getElementsByClassName("close")[0];
+        btn.onclick = function () {
+            modal.style.display = "block";
+        }
+        span.onclick = function () {
+            modal.style.display = "none";
+        }
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        }
+    </script>
+
 </body>
 
 </html>
